@@ -26,6 +26,7 @@
   CR: Template API: Omission of final for the methods scan and render
       Enables the preparation/customization of the meta object before rendering.
       The rendering is done in three steps (content, header, footer) and so this can be done once for all steps.
+  CR: Template API: Added of public for Multiplex and Template.merge(Collection documents)
   CR: Template Generate: Unified behavior of data placeholders and static placeholders
       - Placeholders are case insensitive
       - Placeholders are limited to the following characters: a-z A-Z 0-9 _-
